[gd_scene load_steps=7 format=3 uid="uid://dxrpgxotqwe77"]

[ext_resource type="Script" uid="uid://b1ytb8drhqxpi" path="res://scenes/menu.gd" id="1_4ytvr"]
[ext_resource type="Texture2D" uid="uid://bumkhca36v0p0" path="res://icons/mic.png" id="1_mhnvy"]
[ext_resource type="Texture2D" uid="uid://cq844twwksxbs" path="res://icons/icon2.png" id="2_4ytvr"]
[ext_resource type="Texture2D" uid="uid://ipmhkjehnv83" path="res://icons/help.png" id="3_g3eks"]
[ext_resource type="Texture2D" uid="uid://bmeadssyihorj" path="res://icons/quit.png" id="4_v86rl"]

[sub_resource type="Theme" id="Theme_mae5d"]
default_font_size = 100

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ytvr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.672024, 0.638565, 0.523767, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TopMargin" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 30

[node name="TopHBox" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/TopMargin"]
layout_mode = 2
alignment = 1

[node name="AudioManagerButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/TopMargin/TopHBox"]
layout_mode = 2
icon = ExtResource("1_mhnvy")

[node name="Spacer" type="Control" parent="ColorRect/MarginContainer/VBoxContainer/TopMargin/TopHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/TopMargin/TopHBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 124
text = "peung"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="ColorRect/MarginContainer/VBoxContainer/TopMargin/TopHBox"]
layout_mode = 2
texture = ExtResource("2_4ytvr")

[node name="Spacer2" type="Control" parent="ColorRect/MarginContainer/VBoxContainer/TopMargin/TopHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HelpButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/TopMargin/TopHBox"]
layout_mode = 2
icon = ExtResource("3_g3eks")

[node name="PlayersMargin" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 30

[node name="PlayersHBox" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/PlayersMargin"]
layout_mode = 2
alignment = 1

[node name="Player1Margin" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer/PlayersMargin/PlayersHBox"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 75

[node name="Player1" type="LineEdit" parent="ColorRect/MarginContainer/VBoxContainer/PlayersMargin/PlayersHBox/Player1Margin"]
layout_mode = 2
theme_override_constants/minimum_character_width = 7
theme_override_font_sizes/font_size = 100
text = "Player 1"
alignment = 1
max_length = 10
keep_editing_on_text_submit = true
caret_blink = true

[node name="Player2Margin" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer/PlayersMargin/PlayersHBox"]
layout_mode = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_right = 0

[node name="Player2" type="LineEdit" parent="ColorRect/MarginContainer/VBoxContainer/PlayersMargin/PlayersHBox/Player2Margin"]
layout_mode = 2
theme_override_constants/minimum_character_width = 7
theme_override_font_sizes/font_size = 100
text = "Player 2"
alignment = 1
max_length = 10

[node name="Spacer" type="Control" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BottomMargin" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="BottomHBox" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/BottomMargin"]
layout_mode = 2
alignment = 1

[node name="GamesMargin" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer/BottomMargin/BottomHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 200

[node name="GamesVBox" type="VBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/BottomMargin/BottomHBox/GamesMargin"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/BottomMargin/BottomHBox/GamesMargin/GamesVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Games: "

[node name="NumGames" type="OptionButton" parent="ColorRect/MarginContainer/VBoxContainer/BottomMargin/BottomHBox/GamesMargin/GamesVBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_mae5d")
theme_override_font_sizes/font_size = 100
theme_override_constants/arrow_margin = 10
alignment = 1
selected = 0
allow_reselect = true
item_count = 5
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "3"
popup/item_1/id = 1
popup/item_2/text = "5"
popup/item_2/id = 2
popup/item_3/text = "7"
popup/item_3/id = 3
popup/item_4/text = "9"
popup/item_4/id = 4

[node name="ButtonsMargin" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer/BottomMargin/BottomHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="ButtonsVBox" type="VBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/BottomMargin/BottomHBox/ButtonsMargin"]
layout_mode = 2
alignment = 1

[node name="StartButtonMargin" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer/BottomMargin/BottomHBox/ButtonsMargin/ButtonsVBox"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="StartButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/BottomMargin/BottomHBox/ButtonsMargin/ButtonsVBox/StartButtonMargin"]
layout_mode = 2
icon = ExtResource("2_4ytvr")
icon_alignment = 1

[node name="QuitButtonMargin" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer/BottomMargin/BottomHBox/ButtonsMargin/ButtonsVBox"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="QuitButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/BottomMargin/BottomHBox/ButtonsMargin/ButtonsVBox/QuitButtonMargin"]
layout_mode = 2
icon = ExtResource("4_v86rl")
icon_alignment = 1
